[package]
name = "apikit"
license = "MIT"
description = "A toolkit for building HTTP APIs with Axum"
repository = "https://github.com/dalloriam/apikit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
miette = "5.7.0"
opentelemetry = "0.18.0"
opentelemetry-http = "0.7.0"
serde = { version = "1.0.159", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
uuid = "1.3.0"
